[package]
name = "cargotecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dockerfile-parser = "0.8.0"
escape_string = "0.1.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
