[package]
name = "cargotecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version="4.2.5", features = ["derive"] }
dockerfile-parser = "0.8.0"
escape_string = "0.1.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "2.3.3"
serde_yaml = "0.9.21"
tempfile = "3.5.0"
